# MTDefense

./: .gitignore  .gitmodules  Changelog.md  Cuck TD.bat  Server.bat  Server.conf  changelog.md  client.sh  mtdefense.bat  mtdefense.sh  mtdserver.bat  mtdserver.sh  server.sh
Data/Config/: Config.conf
MapTool/: MapTool.cpp  MapTool.vcxproj  MapTool.vcxproj.filters
Server/: Makefile.am  Server.vcxproj  Server.vcxproj.filters  configure.ac
Src/: Cuck TD.sln  Cuck TD.vcxproj  Cuck TD.vcxproj.filters  Makefile  Makefile.am  configure.ac
Src/Engine/: Audio.hpp  Command.cpp  Command.hpp  Console.cpp  Engine.hpp  GL.cpp  GL.hpp  GUI.hpp  InitGL.cpp  Main.cpp  Map.cpp  Map.hpp  Network.cpp  Network.hpp  Server-Main.cpp  Server.hpp  Text.cpp  Texture.cpp  Texture.hpp  Tools.cpp  Tools.hpp
Src/Game/: Client.cpp  Difficulty.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Language.hpp  Server.cpp  Tower.cpp  Tower.hpp
Src/enet/: protocol.c  win32.c
data/autoexec/: connect.conf
data/config/: config.conf
data/server/: server.conf
server/: configure  server.vcxproj
src/: configure  mtdefense.sln  mtdefense.vcxproj  mtdefense.vcxproj.filters  server.vcxproj  server.vcxproj.filters
src/cxxgui/: .gitignore  LICENSE.txt  README.md  changelog.md
src/cxxgui/src/: cxxgui.sln  cxxgui.vcxproj  cxxgui.vcxproj.filters
src/cxxgui/src/app/: app_main.cpp
src/cxxgui/src/color/: color-scheme.cpp
src/cxxgui/src/cxxgui.xcodeproj/: project.pbxproj
src/cxxgui/src/cxxgui.xcodeproj/xcshareddata/xcschemes/: SDL2_image.xcscheme  SDL2_ttf.xcscheme  cxxgui.xcscheme  tests.xcscheme
src/cxxgui/src/cxxgui.xcodeproj/xcuserdata/korereh.xcuserdatad/xcschemes/: xcschememanagement.plist
src/cxxgui/src/font/: font.cpp
src/cxxgui/src/gl/: clipping.cpp
src/cxxgui/src/image/: image.cpp
src/cxxgui/src/include/cxxgui/: animation.hpp  app.hpp  color.hpp  concepts.hpp  cxxgui.hpp  device-defs.hpp  embeddable.hpp  font.hpp  gl.hpp  image.hpp  input.hpp  settings.hpp  style.hpp  symbols.hpp  symbols_list.hpp  text.hpp  utilities.hpp  view.hpp  window.hpp
src/cxxgui/src/input/: toggle.cpp
src/cxxgui/src/settings/: macos.mm  others.cpp  windows.cpp
src/cxxgui/src/symbols/: media_controls.cpp  symbol_renderer.cpp  ui_base.cpp  ui_devices.cpp  ui_input.cpp
src/cxxgui/src/text/: text.cpp
src/cxxgui/src/view/: view.cpp
src/cxxgui/src/window/: null_function.cpp  window_render.cpp
src/cxxgui/symbol-utility/: main.cpp  symbol-utility.vcxproj
src/cxxgui/tests/: main.cpp  tests.vcxproj
src/engine/: audio.cpp  audio.hpp  command.cpp  command.hpp  console.cpp  engine.hpp  gl.cpp  gl.hpp  initgl.cpp  main.cpp  map.cpp  map.hpp  network.cpp  network.hpp  renderer.ixx  server.hpp  servermain.cpp  text.cpp  texture.cpp  texture.hpp  tools.hpp
src/engine/renderer/: base.ixx  color_format.ixx  color_format_traits.ixx  command_buffer.ixx  opengl.ixx  vertex.ixx  viewport.ixx  window.ixx
src/engine/renderer/base/: base_renderer.ixx  base_window.ixx  command_buffer.ixx  viewport.ixx
src/engine/renderer/color_format/: color_format_traits.ixx  color_format_traits_abgr8.ixx  color_format_traits_argb8.ixx  color_format_traits_bgr8.ixx  color_format_traits_bgra8.ixx  color_format_traits_rgb8.ixx  color_format_traits_rgba8.ixx  color_formats.ixx
src/engine/renderer/opengl/: ogl_renderer.ixx  ogl_window.ixx
src/game/: client.cpp  dictionary.hpp  game.hpp  game_ui.hpp  server.cpp  tower.cpp
src/include/SDL/: SDL_stdinc.h
src/shared/: math.ixx  tools.ixx
src/shared/math/: matrix.ixx  matrix2x2.ixx  matrix3x3.ixx  matrix4x4.ixx  matrix_specializations.ixx  vec.ixx  vec2.ixx  vec3.ixx  vec4.ixx
src/shared/tools/: arrcpy.ixx  arrmove.ixx  arrswap.ixx  limit.ixx  memswap.ixx  result.ixx  types.ixx
src/windows/: .editorconfig  client.vcxproj  client.vcxproj.filters  cuck-td.sln
