AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = cucktdserver

cucktdserver_SOURCES = ../Src/enet/callbacks.c \
                       ../Src/enet/compress.c \
                       ../Src/enet/host.c \
                       ../Src/enet/list.c \
                       ../Src/enet/packet.c \
                       ../Src/enet/peer.c \
                       ../Src/enet/protocol.c \
                       ../Src/enet/unix.c \
                       ../Src/enet/enet/callbacks.h \
                       ../Src/enet/enet/enet.h \
                       ../Src/enet/enet/list.h \
                       ../Src/enet/enet/protocol.h \
                       ../Src/enet/enet/time.h \
                       ../Src/enet/enet/types.h \
                       ../Src/enet/enet/unix.h \
                       ../Src/enet/enet/utility.h \
                       ../Src/Engine/Command.cpp \
                       ../Src/Engine/Command.hpp \
                       ../Src/Engine/Engine.hpp \
                       ../Src/Engine/GL.cpp \
                       ../Src/Engine/GL.hpp \
                       ../Src/Engine/Map.cpp \
                       ../Src/Engine/Map.hpp \
                       ../Src/Engine/Network.cpp \
                       ../Src/Engine/Network.hpp \
                       ../Src/Engine/Server.hpp \
                       ../Src/Engine/Server-Main.cpp \
                       ../Src/Engine/Texture.cpp \
                       ../Src/Engine/Texture.hpp \
                       ../Src/Engine/Tools.hpp \
                       ../Src/Game/Game.hpp \
                       ../Src/Game/Server.cpp \
                       ../Src/Game/Tower.cpp \
                       ../Src/Include/enet/callbacks.h \
                       ../Src/Include/enet/enet.h \
                       ../Src/Include/enet/list.h \
                       ../Src/Include/enet/protocol.h \
                       ../Src/Include/enet/time.h \
                       ../Src/Include/enet/types.h \
                       ../Src/Include/enet/unix.h \
                       ../Src/Include/enet/utility.h
