AUTOMAKE_OPTIONS = subdir-objects
bin_PROGRAMS = cucktd
cucktd_SOURCES = enet/callbacks.c \
                 enet/compress.c \
                 enet/host.c \
                 enet/list.c \
                 enet/packet.c \
                 enet/peer.c \
                 enet/protocol.c \
                 enet/unix.c \
                 enet/enet/callbacks.h \
                 enet/enet/enet.h \
                 enet/enet/list.h \
                 enet/enet/protocol.h \
                 enet/enet/time.h \
                 enet/enet/types.h \
                 enet/enet/unix.h \
                 enet/enet/utility.h \
                 Engine/Audio.cpp \
                 Engine/Audio.hpp \
                 Engine/Command.cpp \
                 Engine/Command.hpp \
                 Engine/Console.cpp \
                 Engine/Engine.hpp \
                 Engine/GL.cpp \
                 Engine/GL.hpp \
                 Engine/Main.cpp \
                 Engine/Map.cpp \
                 Engine/Map.hpp \
                 Engine/Network.cpp \
                 Engine/Network.hpp \
                 Engine/Server.hpp \
                 Engine/Server-Main.cpp \
                 Engine/Text.cpp \
                 Engine/Texture.cpp \
                 Engine/Texture.hpp \
                 Engine/Tools.hpp \
                 Game/Client.cpp \
                 Game/Game.hpp \
                 Game/Server.cpp \
                 Game/Tower.cpp \
                 Include/enet/callbacks.h \
                 Include/enet/enet.h \
                 Include/enet/list.h \
                 Include/enet/protocol.h \
                 Include/enet/time.h \
                 Include/enet/types.h \
                 Include/enet/unix.h \
                 Include/enet/utility.h \
                 Include/SDL/begin_code.h \
                 Include/SDL/close_code.h \
                 Include/SDL/SDL.h \
                 Include/SDL/SDL_assert.h \
                 Include/SDL/SDL_atomic.h \
                 Include/SDL/SDL_audio.h \
                 Include/SDL/SDL_bits.h \
                 Include/SDL/SDL_blendmode.h \
                 Include/SDL/SDL_clipboard.h \
                 Include/SDL/SDL_config.h \
                 Include/SDL/SDL_config.h.cmake \
                 Include/SDL/SDL_config.h.in \
                 Include/SDL/SDL_config_android.h \
                 Include/SDL/SDL_config_iphoneos.h \
                 Include/SDL/SDL_config_macosx.h \
                 Include/SDL/SDL_config_macosx.h.orig \
                 Include/SDL/SDL_config_minimal.h \
                 Include/SDL/SDL_config_pandora.h \
                 Include/SDL/SDL_config_psp.h \
                 Include/SDL/SDL_config_windows.h \
                 Include/SDL/SDL_config_winrt.h \
                 Include/SDL/SDL_config_wiz.h \
                 Include/SDL/SDL_copying.h \
                 Include/SDL/SDL_cpuinfo.h \
                 Include/SDL/SDL_egl.h \
                 Include/SDL/SDL_endian.h \
                 Include/SDL/SDL_error.h \
                 Include/SDL/SDL_events.h \
                 Include/SDL/SDL_filesystem.h \
                 Include/SDL/SDL_gamecontroller.h \
                 Include/SDL/SDL_gesture.h \
                 Include/SDL/SDL_haptic.h \
                 Include/SDL/SDL_hints.h \
                 Include/SDL/SDL_image.h \
                 Include/SDL/SDL_joystick.h \
                 Include/SDL/SDL_keyboard.h \
                 Include/SDL/SDL_keycode.h \
                 Include/SDL/SDL_loadso.h \
                 Include/SDL/SDL_locale.h \
                 Include/SDL/SDL_log.h \
                 Include/SDL/SDL_main.h \
                 Include/SDL/SDL_messagebox.h \
                 Include/SDL/SDL_metal.h \
                 Include/SDL/SDL_misc.h \
                 Include/SDL/SDL_mixer.h \
                 Include/SDL/SDL_mouse.h \
                 Include/SDL/SDL_mutex.h \
                 Include/SDL/SDL_name.h \
                 Include/SDL/SDL_opengl.h \
                 Include/SDL/SDL_opengles.h \
                 Include/SDL/SDL_opengles2.h \
                 Include/SDL/SDL_opengles2_gl2.h \
                 Include/SDL/SDL_opengles2_gl2ext.h \
                 Include/SDL/SDL_opengles2_gl2platform.h \
                 Include/SDL/SDL_opengles2_khrplatform.h \
                 Include/SDL/SDL_opengl_glext.h \
                 Include/SDL/SDL_pixels.h \
                 Include/SDL/SDL_platform.h \
                 Include/SDL/SDL_power.h \
                 Include/SDL/SDL_quit.h \
                 Include/SDL/SDL_rect.h \
                 Include/SDL/SDL_render.h \
                 Include/SDL/SDL_revision.h \
                 Include/SDL/SDL_rwops.h \
                 Include/SDL/SDL_scancode.h \
                 Include/SDL/SDL_sensor.h \
                 Include/SDL/SDL_shape.h \
                 Include/SDL/SDL_stdinc.h \
                 Include/SDL/SDL_surface.h \
                 Include/SDL/SDL_system.h \
                 Include/SDL/SDL_syswm.h \
                 Include/SDL/SDL_test.h \
                 Include/SDL/SDL_test_assert.h \
                 Include/SDL/SDL_test_common.h \
                 Include/SDL/SDL_test_compare.h \
                 Include/SDL/SDL_test_crc32.h \
                 Include/SDL/SDL_test_font.h \
                 Include/SDL/SDL_test_fuzzer.h \
                 Include/SDL/SDL_test_harness.h \
                 Include/SDL/SDL_test_images.h \
                 Include/SDL/SDL_test_log.h \
                 Include/SDL/SDL_test_md5.h \
                 Include/SDL/SDL_test_memory.h \
                 Include/SDL/SDL_test_random.h \
                 Include/SDL/SDL_thread.h \
                 Include/SDL/SDL_timer.h \
                 Include/SDL/SDL_touch.h \
                 Include/SDL/SDL_ttf.h \
                 Include/SDL/SDL_types.h \
                 Include/SDL/SDL_version.h \
                 Include/SDL/SDL_video.h \
                 Include/SDL/SDL_vulkan.h
