AC_INIT([cucktd], [1.0])

CPPFLAGS="$CPPFLAGS -IInclude"
LIBS="$LIBS -pthread"

AC_CONFIG_SRCDIR([enet/callbacks.c])
AC_CONFIG_SRCDIR([enet/compress.c])
AC_CONFIG_SRCDIR([enet/host.c])
AC_CONFIG_SRCDIR([enet/list.c])
AC_CONFIG_SRCDIR([enet/packet.c])
AC_CONFIG_SRCDIR([enet/peer.c])
AC_CONFIG_SRCDIR([enet/protocol.c])
AC_CONFIG_SRCDIR([enet/unix.c])
AC_CONFIG_SRCDIR([enet/enet/callbacks.h])
AC_CONFIG_SRCDIR([enet/enet/enet.h])
AC_CONFIG_SRCDIR([enet/enet/list.h])
AC_CONFIG_SRCDIR([enet/enet/protocol.h])
AC_CONFIG_SRCDIR([enet/enet/time.h])
AC_CONFIG_SRCDIR([enet/enet/types.h])
AC_CONFIG_SRCDIR([enet/enet/unix.h])
AC_CONFIG_SRCDIR([enet/enet/utility.h])
AC_CONFIG_SRCDIR([Engine/Audio.cpp])
AC_CONFIG_SRCDIR([Engine/Audio.hpp])
AC_CONFIG_SRCDIR([Engine/Command.cpp])
AC_CONFIG_SRCDIR([Engine/Command.hpp])
AC_CONFIG_SRCDIR([Engine/Console.cpp])
AC_CONFIG_SRCDIR([Engine/Engine.hpp])
AC_CONFIG_SRCDIR([Engine/GL.cpp])
AC_CONFIG_SRCDIR([Engine/GL.hpp])
AC_CONFIG_SRCDIR([Engine/Main.cpp])
AC_CONFIG_SRCDIR([Engine/Map.cpp])
AC_CONFIG_SRCDIR([Engine/Map.hpp])
AC_CONFIG_SRCDIR([Engine/Network.cpp])
AC_CONFIG_SRCDIR([Engine/Network.hpp])
AC_CONFIG_SRCDIR([Engine/Server.hpp])
AC_CONFIG_SRCDIR([Engine/Server-Main.cpp])
AC_CONFIG_SRCDIR([Engine/Text.cpp])
AC_CONFIG_SRCDIR([Engine/Texture.cpp])
AC_CONFIG_SRCDIR([Engine/Texture.hpp])
AC_CONFIG_SRCDIR([Engine/Tools.hpp])
AC_CONFIG_SRCDIR([Game/Client.cpp])
AC_CONFIG_SRCDIR([Game/Game.hpp])
AC_CONFIG_SRCDIR([Game/Server.cpp])
AC_CONFIG_SRCDIR([Game/Tower.cpp])
AC_CONFIG_SRCDIR([Include/enet/callbacks.h])
AC_CONFIG_SRCDIR([Include/enet/enet.h])
AC_CONFIG_SRCDIR([Include/enet/list.h])
AC_CONFIG_SRCDIR([Include/enet/protocol.h])
AC_CONFIG_SRCDIR([Include/enet/time.h])
AC_CONFIG_SRCDIR([Include/enet/types.h])
AC_CONFIG_SRCDIR([Include/enet/unix.h])
AC_CONFIG_SRCDIR([Include/enet/utility.h])
AC_CONFIG_SRCDIR([Include/SDL/begin_code.h])
AC_CONFIG_SRCDIR([Include/SDL/close_code.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_assert.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_atomic.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_audio.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_bits.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_blendmode.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_clipboard.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config.h.cmake])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config.h.in])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_android.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_iphoneos.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_macosx.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_macosx.h.orig])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_minimal.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_pandora.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_psp.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_windows.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_winrt.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_config_wiz.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_copying.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_cpuinfo.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_egl.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_endian.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_error.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_events.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_filesystem.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_gamecontroller.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_gesture.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_haptic.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_hints.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_image.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_joystick.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_keyboard.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_keycode.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_loadso.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_locale.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_log.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_main.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_messagebox.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_metal.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_misc.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_mixer.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_mouse.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_mutex.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_name.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_opengl.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_opengles.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_opengles2.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_opengles2_gl2.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_opengles2_gl2ext.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_opengles2_gl2platform.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_opengles2_khrplatform.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_opengl_glext.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_pixels.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_platform.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_power.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_quit.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_rect.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_render.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_revision.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_rwops.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_scancode.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_sensor.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_shape.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_stdinc.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_surface.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_system.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_syswm.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_assert.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_common.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_compare.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_crc32.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_font.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_fuzzer.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_harness.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_images.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_log.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_md5.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_memory.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_test_random.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_thread.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_timer.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_touch.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_ttf.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_types.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_version.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_video.h])
AC_CONFIG_SRCDIR([Include/SDL/SDL_vulkan.h])

AC_CONFIG_AUX_DIR([.aux])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CC
AC_PROG_CXX

echo -n "checking for c++23 compiler... "
echo "int main() { return 0; }" > __test.cpp
if $CXX -std=c++2b __test.cpp -o __test > /dev/null 2>&1; then
	echo "$CXX"
	CPPFLAGS="$CPPFLAGS -std=c++2b"
	rm -f __test.cpp __test
else
	echo "no"
	rm -f __test.cpp
	echo "fatal: c++23 compiler not found"
	exit
fi

echo -n "checking for sdl2... "
echo "int main() { return 0; }" > __test.cpp
if $CXX -lSDL2 -lSDL2main __test.cpp -o __test > /dev/null 2>&1; then
	echo "yes"
	LIBS="$LIBS -lSDL2 -lSDL2main"
	rm -f __test.cpp __test
else
	echo "no"
	rm -f __test.cpp
	echo "fatal: sdl2 not found"
	exit
fi

echo -n "checking for sdl2image... "
echo "int main() { return 0; }" > __test.cpp
if $CXX -lSDL2image __test.cpp -o __test > /dev/null 2>&1; then
	echo "yes"
	LIBS="$LIBS -lSDL2image"
	rm -f __test.cpp __test
else
	echo "no"
	rm -f __test.cpp
	echo "fatal: sdl2image not found"
	exit
fi

echo -n "checking for sdl2ttf... "
echo "int main() { return 0; }" > __test.cpp
if $CXX -lSDL2ttf __test.cpp -o __test > /dev/null 2>&1; then
	echo "yes"
	LIBS="$LIBS -lSDL2ttf"
	rm -f __test.cpp __test
else
	echo "no"
	rm -f __test.cpp
	echo "fatal: sdl2ttf not found"
	exit
fi

echo -n "checking for sdl2mixer... "
echo "int main() { return 0; }" > __test.cpp
if $CXX -lSDL2mixer __test.cpp -o __test > /dev/null 2>&1; then
	echo "yes"
	LIBS="$LIBS -lSDL2mixer"
	rm -f __test.cpp __test
else
	echo "no"
	rm -f __test.cpp
	echo "fatal: sdl2mixer not found"
	exit
fi

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
